# RendererOpengl

./: CMakeLists.txt  CMakePresets.json  Explanation.docx
Engine/: CMakeLists.txt
Engine/resources/: fontvertex.glsl
Engine/src/: Camera.cpp  Camera.h  Component.cpp  Component.h  Engine.cpp  Engine.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  GameObject.cpp  GameObject.h  Image.cpp  Image.h  ImageComponent.cpp  ImageComponent.h  Light.cpp  Light.h  MathHelper.cpp  MathHelper.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Singleton.h  TextComponent.cpp  TextComponent.h  TimeEngine.h  Transform.cpp  Transform.h  (+1 more)
Game/: CMakeLists.txt  main.cpp
Game/resources/: Clouds.fbx  fragment.glsl  vertex.glsl
